--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 <meta name="description" content="Weather application" />
 <link rel="stylesheet" href="./DNA_common/css/style.css"/>
 <link rel="stylesheet" href="./css/style.css"/>
-<script type="text/javascript" src="./DNA_common/components/jQuery/jquery-1.8.2.js"></script>
 <script type="text/javascript" src="./js/iscroll.js"></script>
+<script type="text/javascript" src="./DNA_common/components/jQuery/jquery-1.8.2.js"></script>
+
 <script type="text/javascript" src="./DNA_common/js/init.js"></script>
 
 <script type="text/javascript">
@@ -26,6 +27,7 @@
 	includeJs("./js/keyControl.js");
 	includeJs("./js/actionCatcher.js");
 	includeJs("./js/main.js");
+	includeJs("./DNA_common/components/jQuery/jquery.nouislider.js");
 	//$.holdReady( false );
 </script>
 
