Final weather positioning for modal, add and remove location buttons. Known issue: must use mouse to remove a location, tap doesn't work.
Change-Id: I8b83e7d08c8d7358637b18a8d50cf0d756ca4bff

--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
 </head>
 
 <body>
-<!-- <div id="base"> -->
-
+<div id="base">
 <div id="topBar"></div>
-<!-- <div id="app>"> -->
+<div id="app">
 <div id="clockElement"></div>
 <div id="listItemTemplate" style="display:none;">
 	<li class="listItem">
@@ -67,7 +66,7 @@
 		</div>
 	</li>
 </div>
-<div id="locList" class="itemList border">
+<div id="locList" class="itemList">
 	<div id="locListInner"></div>
 </div>
 
@@ -89,12 +88,11 @@
 
 	<div id="addLocation" class="fontColorNormal" onclick="showLocationModal()">+</div>
 </div>
-<!-- </div> --><!-- end of app -->
+</div> <!-- end of app -->
 
 <div id="bottomBar"></div>
 
-
-<!-- </div> --><!-- end of base -->
+</div><!-- end of base -->
 </body>
 
 </html>
