Fixed top bar icons for weather
Change-Id: I4426fb6882aa7f6acfa0dcdaf49cae7b89e2eca6

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
 <script type="text/javascript">
 	//$.holdReady( true );
-	includeJs("./js/predefAppModel.js");
-	includeJs("./js/installedApps.js");
-	includeJs("./js/keyControl.js");
-	includeJs("./js/actionCatcher.js");
+	//includeJs("./js/predefAppModel.js");
+	//includeJs("./js/installedApps.js");
+	//includeJs("./js/keyControl.js");
+	//includeJs("./js/actionCatcher.js");
 	includeJs("./js/main.js");
 	includeJs("./DNA_common/components/jQuery/jquery.nouislider.js");
 	//$.holdReady( false );
