Weather: fixed the image for the 5 day forecast
Change-Id: Id3760a3eb27dcf17ecc284c0185ddb94410440e5

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				</span>
 				<div class="R_indicator arrow-right"></div>
 			</div>
-			<div class="removeLocationControl itemText" style=" ">X</div>
+			<div class="removeLocationControl"></div>
 		</div>
 	</li>
 </div>
