--- a/index.html
+++ b/index.html
@@ -38,33 +38,61 @@
 <div id="topBar"></div>
 <div id="app">
 <div id="clockElement"></div>
-<div id="listItemTemplate" style="display:none;">
+<div id="locList">
+<div id ="locListInner">
+<template id="listItemTemplate">
+
+<div id="locListItemInner">"
+<ul class="locListItem">
+
+	<li class="forecastGrid hourlyBlock">
+		<div class="forecastGrid_load"> 
+		<!-- a javascript for loop in main.js makes the call for the hourly information, 6 iterations,
+		<div class="hourly"><p class="hour">6pm</p><img src="images/Accuweather_icons/34-s.png">
+		<div class="iconPhrase">Mostly clear</div><p class="hour_temp">37°F </p></div> -->
+		<script type="javascript">
+			/*render the results of the function on line 529 here*/
+		</script>
+		</div>
+	</li>
+
 	<li class="listItem">
 		<div class="awxCurrentConditions">
 			<div class="condImage">
-				<div class="L_indicator arrow-left"></div>
-				<img class="weatherIcon" src="images/Accuweather_icons/14-s.png">
+				<div class="L_indicator arrow-left"></div><img class="weatherIcon" src="">
 			</div>
 			<div class="itemText">
-				<span class="locName fontSizeXXXLarge fontLtBlue">Portland</span>
-				<div class="moreInfo" style="opacity: 1; ">
+				<div class="removeLocationControl" style="display: block;"></div>
+				<span class="locName fontSizeXXXLarge fontLtBlue"><!-- "locationName" --></span>
+				<div class="moreInfo" style="opacity: 1;">
 					<div class="currentDetails">
-						<span class="fontSizeLarge humidityData">Humidity: 63%</span>
-						<span class="fontSizeLargewindData">Wind: SE 10.4mi/h</span><br>
-						<span class="fontSizeLarge rainData">  </span>
-						<span class="fontSizeLarge rfData">RealFeel®: 71F</span>
+						<span class="fontSizeSmall humidityData">Humidity: <!-- "+detail.RelativeHumidity+"%" --></span>
+						<span class="fontSizeSmall windData">Wind: <!-- "+detail.Wind.Direction.Localized+ " " + detail.Wind.Speed.Imperial.Value+detail.Wind.Speed.Imperial.Unit)" --></span><br>
+						<!-- <span class="fontSizeSmall rainData">  </span> -->
+						<span class="fontSizeSmall rfData">RealFeel&#174;: <!-- "+detail.RealFeelTemperature.Imperial.Value+detail.RealFeelTemperature.Imperial.Unit" --></span>
 					</div>
 				</div>
 			</div>
 			<div class="tempBox" onclick="event.stopPropagation">
-				<span class="temp">
-					<span class="tempVal">73</span><sup>°<span class="tempMeasurement">F</span></sup>
-				</span>
+				<span class="temp"><span class="tempVal">--</span><sup>°<span class="tempMeasurement">F</span></sup></span>
 				<div class="R_indicator arrow-right"></div>
 			</div>
-			<div class="removeLocationControl"></div>
 		</div>
 	</li>
+
+	<li class="forecastGrid fiveDayBlock">
+		<div class="forecastGrid_load">
+			<!-- a javascript for loop in main.js makes the call for the 5-day forecast information, 6 iterations,
+			<div class="fiveDay"><p class="weekday">TODAY</p><p>January 5</p><img src="images/Accuweather_icons/4-s.png" 
+			class="icon"><div class="iconPhrase">Intermittent clouds</div><p><span class="hour_temp">41°F</span> Lo 21°F</p></div> -->
+			<script src="javascript" text="javascript">
+			/*render the results of the fiveDayForecast variable here, line 479*/
+			</script>
+		</div>
+	</li>
+	</ul>
+</template>
+</div>
 </div>
 <div id="locList" class="itemList">
 	<div id="locListInner"></div>
@@ -74,8 +102,7 @@
 		<div id="search">
 			<span onclick="hideLocationModal()" class="close-button" type="reset"></span>
 		   <h2>Location Search</h2>
-	   		<!-- <label for="Text">Enter location name:</label> -->
-		    <input id="awxSearchTextBox" type="text" class="inputNumber" placeholder="city, state, or zip"><!-- <div class="delete-button" type="reset"></div> --><!-- </div> -->
+		    <input id="awxSearchTextBox" type="text" class="inputNumber" placeholder="city, state, or zip">
 		    <input id="awxSearchButton" class="button button-blue" type="submit" value="Search" />
 			<ul id="searchResults">
 				
