Weather - re-do's on some CSS, a tad bit of final class and stylesheet clean-up. Possible bug - I'm only getting 4 locations when the Add Location button disappears. Removed the files 'index.html.new' and 'index.html.old'.
Change-Id: I0d074db35ecc537332a91f46eaaa7015a812eca8

--- a/index.html
+++ b/index.html
@@ -123,15 +123,15 @@
 </div> -->
 
 	<div id="locationModal" class="modal-bkgrnd">	
-		<div id="search">
-			<h2>Location Search</h2>
-			<span onclick="hideLocationModal()" class="close-button" type="reset"></span>		   
-		    <input id="awxSearchTextBox" type="text" class="inputField" placeholder="city, state, or zip">
-		    <input id="awxSearchButton" class="button button-blue" type="submit" value="Search" />
-			<ul id="searchResults">
-				
-			</ul>
-		</div>
+		<span onclick="hideLocationModal()" class="close-button" type="reset"></span>
+		<h2>Location Search</h2>		   
+  	<div class="input-group">
+		  <input id="awxSearchTextBox" class="text-input input-white" type="text"  placeholder="city, state, or zip">
+    	<input id="awxSearchButton" value="Search" type="button" class="button-blue">
+    </div>
+		<ul id="searchResults" class="searchResults">
+			
+		</ul>
 	</div>
 
 	<div class="justify">
