changed the style.css to weather.css, combined sheets for browser.css, took out a non-used file in MOSTAudio
Change-Id: I1eff187aeecd172e99f06a37b93025d2de89b8c2

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta name="viewport" content="width=1080, height=1920, user-scalable=no" />
 <meta name="description" content="Weather application" />
 <link rel="stylesheet" href="./DNA_common/css/style.css"/>
-<link rel="stylesheet" href="./css/style.css"/>
+<link rel="stylesheet" href="./css/weather.css"/>
 <script type="text/javascript" src="./js/iscroll.js"></script>
 <script type="text/javascript" src="./DNA_common/components/jQuery/jquery-1.8.2.js"></script>
 
