Removed the old bluetooth and wifi js files from settings/js Removed the old spinner code from settings.html Removed DNA_Weather/js/installedApps.js Removed DNA_RVITest directory, not needed anymore per Magnus Removed DNA_Weather/js/car.js Modified DNA_Weather's index, main.js, and css to exclude any ousted CSS rules.
Change-Id: I8702a532c1543bd1a7d08ae525c64aa930307268

--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 			</div>
 			<div class="itemText">
 				<div class="removeLocationControl" style="display: block;"></div>
-				<span class="locName fontSizeXXXLarge fontLtBlue"><!-- "locationName" --></span>
+				<span class="locName"><!-- "locationName" --></span>
 				<div class="moreInfo" style="opacity: 1;">
 					<div class="currentDetails">
-						<span class="fontSizeSmall humidityData">Humidity: <!-- "+detail.RelativeHumidity+"%" --></span>
-						<span class="fontSizeSmall windData">Wind: <!-- "+detail.Wind.Direction.Localized+ " " + detail.Wind.Speed.Imperial.Value+detail.Wind.Speed.Imperial.Unit)" --></span><br>
-						<!-- <span class="fontSizeSmall rainData">  </span> -->
-						<span class="fontSizeSmall rfData">RealFeel&#174;: <!-- "+detail.RealFeelTemperature.Imperial.Value+detail.RealFeelTemperature.Imperial.Unit" --></span>
+						<p><span class="humidityData">Humidity: <!-- "+detail.RelativeHumidity+"%" --></span>
+						<span class="windData">Wind: <!-- "+detail.Wind.Direction.Localized+ " " + detail.Wind.Speed.Imperial.Value+detail.Wind.Speed.Imperial.Unit)" --></span><br>
+						<!-- <span class="rainData">  </span> -->
+						<span class="rfData">RealFeel&#174;: <!-- "+detail.RealFeelTemperature.Imperial.Value+detail.RealFeelTemperature.Imperial.Unit" --></span></p>
 					</div>
 				</div>
 			</div>
