--- a/index.html
+++ b/index.html
@@ -16,141 +16,180 @@
  *
 -->
 <html>
-<head>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>DNA Weather</title>
-<meta name="viewport" content="width=1080, height=1920, user-scalable=no" />
-<meta name="description" content="Weather application" />
-<link rel="stylesheet" href="./DNA_common/css/style.css"/>
-<link rel="stylesheet" href="./css/weather.css"/>
-<script type="text/javascript" src="./js/iscroll.js"></script>
-<script type="text/javascript" src="./DNA_common/components/jQuery/jquery-1.8.2.js"></script>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=1080, height=1920, user-scalable=no" />
+    <meta name="description" content="Weather application" />
+    <link rel="stylesheet" href="./DNA_common/css/style.css" />
+    <link rel="stylesheet" href="./css/weather.css" />
+    <script type="text/javascript" src="./js/iscroll.js"></script>
+    <script type="text/javascript" src="./DNA_common/components/jQuery/jquery-1.8.2.js"></script>
+    <script type="text/javascript" src="./DNA_common/js/init.js"></script>
+    <script type="text/javascript">
+      includeJs("./js/main.js");
+      includeJs("./DNA_common/components/jQuery/jquery.nouislider.js");
+    </script>
+    <title>DNA Weather</title>
+  </head>
 
-<script type="text/javascript" src="./DNA_common/js/init.js"></script>
-
-<script type="text/javascript">
-	includeJs("./js/main.js");
-	includeJs("./DNA_common/components/jQuery/jquery.nouislider.js");
-</script>
-
-</head>
-
-<body>
-<div id="base">
-<div id="topBar"></div>
-<div id="app">
-<div id="clockElement"></div>
-<div id="locList" class="itemList">
-<div id ="locListInner">
-<template id="listItemTemplate">
-
-<div id="locListItemInner">
-<!-- <template id="listItemTemplate"> -->
-<ul class="locListItem">
-
-	<li class="forecastGrid hourlyBlock">
-		<div class="forecastGrid_load"> 
-		<!-- a javascript for loop in main.js makes the call for the hourly information, 6 iterations -->
-		<!--<script type="javascript">
-			/*render the results of the function on line 529 */
-		</script>-->
-		<div class="hourly"><p class="hour">6pm</p><img src="images/Accuweather_icons/34-s.png">
-		<div class="iconPhrase">Mostly clear</div><p class="hour_temp">37°F </p></div> 
-		<div class="hourly"><p class="hour">6pm</p><img src="images/Accuweather_icons/34-s.png">
-		<div class="iconPhrase">Mostly clear</div><p class="hour_temp">37°F </p></div> 
-		<div class="hourly"><p class="hour">6pm</p><img src="images/Accuweather_icons/34-s.png">
-		<div class="iconPhrase">Mostly clear</div><p class="hour_temp">37°F </p></div> 		
-		<div class="hourly"><p class="hour">6pm</p><img src="images/Accuweather_icons/34-s.png">
-		<div class="iconPhrase">Mostly clear</div><p class="hour_temp">37°F </p></div> 		
-		<div class="hourly"><p class="hour">6pm</p><img src="images/Accuweather_icons/34-s.png">
-		<div class="iconPhrase">Mostly clear</div><p class="hour_temp">37°F </p></div> 
-		<div class="hourly"><p class="hour">6pm</p><img src="images/Accuweather_icons/34-s.png">
-		<div class="iconPhrase">Mostly clear</div><p class="hour_temp">37°F </p></div> 
-		</div>
-	</li>
-
-	<li class="listItem">
-		<div class="awxCurrentConditions">
-			<div class="condImage">
-				<div class="L_indicator arrow-left"></div><img class="weatherIcon" src="">
-			</div>
-			<div class="itemText">
-				<div class="removeLocationControl" style="display: block;"></div>
-				<span class="locName"><!-- "locationName" --></span>
-				<div class="moreInfo" style="opacity: 1;">
-					<div class="currentDetails">
-						<p><span class="humidityData">Humidity: <!-- "+detail.RelativeHumidity+"%" --></span>
-						<span class="windData">Wind: <!-- "+detail.Wind.Direction.Localized+ " " + detail.Wind.Speed.Imperial.Value+detail.Wind.Speed.Imperial.Unit)" --></span><br>
-						<!-- <span class="rainData">  </span> -->
-						<span class="rfData">RealFeel&#174;: <!-- "+detail.RealFeelTemperature.Imperial.Value+detail.RealFeelTemperature.Imperial.Unit" --></span></p>
-					</div>
-				</div>
-			</div>
-			<div class="tempBox" onclick="event.stopPropagation">
-				<span class="temp"><span class="tempVal">--</span><sup>°<span class="tempMeasurement">F</span></sup></span>
-				<div class="R_indicator arrow-right"></div>
-			</div>
-		</div>
-	</li>
-
-	<li class="forecastGrid fiveDayBlock">
-		<div class="forecastGrid_load">
-			<!-- a javascript for loop in main.js makes the call for the 5-day forecast information, 6 iterations -->
-			<!--<script src="javascript" text="javascript">
-			/*render the results of the fiveDayForecast variable, line 479*/
-			</script>-->
-			<div class="fiveDay"><p class="weekday">TODAY</p><p>January 5</p><img src="images/Accuweather_icons/4-s.png" 
-			class="icon"><div class="iconPhrase">Intermittent clouds</div><p><span class="hour_temp">41°F</span> Lo 21°F</p></div>
-			<div class="fiveDay"><p class="weekday">TODAY</p><p>January 5</p><img src="images/Accuweather_icons/4-s.png" 
-			class="icon"><div class="iconPhrase">Intermittent clouds</div><p><span class="hour_temp">41°F</span> Lo 21°F</p></div>
-			<div class="fiveDay"><p class="weekday">TODAY</p><p>January 5</p><img src="images/Accuweather_icons/4-s.png" 
-			class="icon"><div class="iconPhrase">Intermittent clouds</div><p><span class="hour_temp">41°F</span> Lo 21°F</p></div>
-			<div class="fiveDay"><p class="weekday">TODAY</p><p>January 5</p><img src="images/Accuweather_icons/4-s.png" 
-			class="icon"><div class="iconPhrase">Intermittent clouds</div><p><span class="hour_temp">41°F</span> Lo 21°F</p></div>
-			<div class="fiveDay"><p class="weekday">TODAY</p><p>January 5</p><img src="images/Accuweather_icons/4-s.png" 
-			class="icon"><div class="iconPhrase">Intermittent clouds</div><p><span class="hour_temp">41°F</span> Lo 21°F</p></div>
-			<div class="fiveDay"><p class="weekday">TODAY</p><p>January 5</p><img src="images/Accuweather_icons/4-s.png" 
-			class="icon"><div class="iconPhrase">Intermittent clouds</div><p><span class="hour_temp">41°F</span> Lo 21°F</p></div>
-		</div>
-	</li>
-	</ul>
-	<!-- </template> -->
-	<div id="locList" class="itemList">
-	<div id="locListInner"></div>
-</div>
-	</div>
-</template>
-
-<!-- the template should render inside "locListItemInner" -->
-<div id="locListItemInner"></div>
-
-</div>
-</div>
-<!-- <div id="locList" class="itemList">
-	<div id="locListInner"></div>
-</div> -->
-
-	<div id="locationModal" class="modal-bkgrnd">	
-		<span onclick="hideLocationModal()" class="close-button" type="reset"></span>
-		<h2>Location Search</h2>		   
-  	<div class="input-group">
-		  <input id="awxSearchTextBox" class="text-input input-white" type="text"  placeholder="city, state, or zip">
-    	<input id="awxSearchButton" value="Search" type="button" class="button-blue">
+  <body>
+    <div id="top-bar"></div>
+    <div id="center-panel">
+      <div id="app">
+        <div id="clockElement"></div>
+        <div id="locList" class="itemList">
+          <div id="locListInner">
+            <template id="listItemTemplate">
+              <div id="locListItemInner">
+                <ul class="locListItem">
+                  <li class="forecastGrid hourlyBlock">
+                    <div class="forecastGrid_load">
+                      <!--
+											a javascript for loop in main.js makes the call for the hourly information, 6 iterations
+											<script type="javascript">
+												/* render the results of the function on line 529 */
+											</script>
+										-->
+                      <div class="hourly">
+                        <p class="hour">6pm</p>
+                        <img src="images/Accuweather_icons/34-s.png">
+                        <div class="iconPhrase">Mostly clear</div>
+                        <p class="hour_temp">37°F </p>
+                      </div>
+                      <div class="hourly">
+                        <p class="hour">6pm</p>
+                        <img src="images/Accuweather_icons/34-s.png">
+                        <div class="iconPhrase">Mostly clear</div>
+                        <p class="hour_temp">37°F </p>
+                      </div>
+                      <div class="hourly">
+                        <p class="hour">6pm</p>
+                        <img src="images/Accuweather_icons/34-s.png">
+                        <div class="iconPhrase">Mostly clear</div>
+                        <p class="hour_temp">37°F </p>
+                      </div>
+                      <div class="hourly">
+                        <p class="hour">6pm</p>
+                        <img src="images/Accuweather_icons/34-s.png">
+                        <div class="iconPhrase">Mostly clear</div>
+                        <p class="hour_temp">37°F </p>
+                      </div>
+                      <div class="hourly">
+                        <p class="hour">6pm</p>
+                        <img src="images/Accuweather_icons/34-s.png">
+                        <div class="iconPhrase">Mostly clear</div>
+                        <p class="hour_temp">37°F </p>
+                      </div>
+                      <div class="hourly">
+                        <p class="hour">6pm</p>
+                        <img src="images/Accuweather_icons/34-s.png">
+                        <div class="iconPhrase">Mostly clear</div>
+                        <p class="hour_temp">37°F </p>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="listItem">
+                    <div class="awxCurrentConditions">
+                      <div class="condImage">
+                        <div class="L_indicator arrow-left"></div>
+                        <img class="weatherIcon" src="">
+                      </div>
+                      <div class="itemText">
+                        <div class="removeLocationControl" style="display: block;"></div>
+                        <span class="locName"></span>
+                        <div class="moreInfo" style="opacity: 1;">
+                          <div class="currentDetails">
+                            <p><span class="humidityData">Humidity: </span><span class="windData">Wind: </span>
+                              <br><span class="rfData">RealFeel&#174;: </span></p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="tempBox" onclick="event.stopPropagation">
+                        <span class="temp"><span class="tempVal">--</span><sup>°<span class="tempMeasurement">F</span></sup></span>
+                        <div class="R_indicator arrow-right"></div>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="forecastGrid fiveDayBlock">
+                    <div class="forecastGrid_load">
+                      <!--
+											a javascript for loop in main.js makes the call for the 5-day forecast information, 6 iterations
+											<script src="javascript" text="javascript">
+												/* render the results of the fiveDayForecast variable, line 479 */
+											</script>
+										-->
+                      <div class="fiveDay">
+                        <p class="weekday">TODAY</p>
+                        <p>January 5</p>
+                        <img src="images/Accuweather_icons/4-s.png" class="icon">
+                        <div class="iconPhrase">Intermittent clouds</div>
+                        <p><span class="hour_temp">41°F</span> Lo 21°F</p>
+                      </div>
+                      <div class="fiveDay">
+                        <p class="weekday">TODAY</p>
+                        <p>January 5</p>
+                        <img src="images/Accuweather_icons/4-s.png" class="icon">
+                        <div class="iconPhrase">Intermittent clouds</div>
+                        <p><span class="hour_temp">41°F</span> Lo 21°F</p>
+                      </div>
+                      <div class="fiveDay">
+                        <p class="weekday">TODAY</p>
+                        <p>January 5</p>
+                        <img src="images/Accuweather_icons/4-s.png" class="icon">
+                        <div class="iconPhrase">Intermittent clouds</div>
+                        <p><span class="hour_temp">41°F</span> Lo 21°F</p>
+                      </div>
+                      <div class="fiveDay">
+                        <p class="weekday">TODAY</p>
+                        <p>January 5</p>
+                        <img src="images/Accuweather_icons/4-s.png" class="icon">
+                        <div class="iconPhrase">Intermittent clouds</div>
+                        <p><span class="hour_temp">41°F</span> Lo 21°F</p>
+                      </div>
+                      <div class="fiveDay">
+                        <p class="weekday">TODAY</p>
+                        <p>January 5</p>
+                        <img src="images/Accuweather_icons/4-s.png" class="icon">
+                        <div class="iconPhrase">Intermittent clouds</div>
+                        <p><span class="hour_temp">41°F</span> Lo 21°F</p>
+                      </div>
+                      <div class="fiveDay">
+                        <p class="weekday">TODAY</p>
+                        <p>January 5</p>
+                        <img src="images/Accuweather_icons/4-s.png" class="icon">
+                        <div class="iconPhrase">Intermittent clouds</div>
+                        <p><span class="hour_temp">41°F</span> Lo 21°F</p>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+                <div id="locList" class="itemList">
+                  <div id="locListInner"></div>
+                </div>
+              </div>
+            </template>
+            <!-- the template should render inside "locListItemInner" -->
+            <div id="locListItemInner"></div>
+          </div>
+        </div>
+        <!-- <div id="locList" class="itemList">
+				<div id="locListInner"></div>
+			</div> -->
+        <div id="locationModal" class="modal-bkgrnd">
+          <span onclick="hideLocationModal()" class="close-button" type="reset"></span>
+          <h2>Location Search</h2>
+          <div class="input-group">
+            <input id="awxSearchTextBox" class="text-input input-white" type="text" placeholder="city, state, or zip">
+            <input id="awxSearchButton" value="Search" type="button" class="button-blue">
+          </div>
+          <ul id="searchResults" class="searchResults"></ul>
+        </div>
+        <div class="justify">
+          <div id="addLocation" class="addLocation" onclick="showLocationModal()">+</div>
+          <div id="removeLocation" class="removeLocation" onclick="toggleRemoveControl()">_</div>
+        </div>
+      </div>
     </div>
-		<ul id="searchResults" class="searchResults">
-			
-		</ul>
-	</div>
-
-	<div class="justify">
-		<div id="addLocation" class="addLocation" onclick="showLocationModal()">+</div>
-		<div id="removeLocation" class="removeLocation" onclick="toggleRemoveControl()">_</div>	
-	</div>
-</div> <!-- end of app -->
-
-<div id="bottomBar"></div>
-
-</div><!-- end of base -->
-</body>
-
+    <div id="bottom-bar"></div>
+  </body>
 </html>
